# knowledge-graph

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  automations.py  batch_progress.txt  batch_progress_1.txt  batch_progress_10.txt  batch_progress_11.txt  batch_progress_12.txt  batch_progress_13.txt  batch_progress_14.txt  batch_progress_15.txt  batch_progress_3.txt  batch_progress_5.txt  batch_progress_6.txt  batch_progress_7.txt  batch_progress_8.txt  batch_progress_9.txt  batch_progress_index.txt  batch_progress_index_1.txt  batch_progress_index_3.txt  batch_progress_index_4.txt  batch_progress_translated.txt  batch_progress_translated_2.txt  batch_progress_translated_4.txt  benchmark_data_CCLW.executive.10014.4470.json  classifiers.txt  clevis.toml  config.yaml  deployments.py  deployments.py.backup  diff.txt  docker-compose.yml  document_mentions.csv  (+17 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bump.yml  cd.yml  ci.yaml  ci.yml  cicd.yml  deploy-docs.yml  prefect_deploy.yml  prefect_deploy_sandbox.yml  prefect_deploy_staging.yml  stale.yml  validate_custom_configs.yml
.rules/: no-print-in-flow-task.yaml  use-walrus-operator.yaml
.rules-tests/: no-print-in-flow-parameterized.yml  no-print-in-flow-simple.yml  no-print-in-materialize-parameterized.yml  no-print-in-materialize-simple.yml  no-print-in-task-parameterized.yml  no-print-in-task-simple.yml  remove-declaration.yml  use-walrus-operator.yml
.rules-tests/__snapshots__/: no-print-in-flow-parameterized-snapshot.yml  no-print-in-flow-simple-snapshot.yml  no-print-in-materialize-parameterized-snapshot.yml  no-print-in-materialize-simple-snapshot.yml  no-print-in-task-parameterized-snapshot.yml  no-print-in-task-simple-snapshot.yml  remove-declaration-snapshot.yml  use-walrus-operator-snapshot.yml
.trunk/: trunk.yaml
.trunk/configs/: bandit.yaml  ruff.toml
concept_librarian/: README.md  __init__.py  __main__.py  checks.py
concept_librarian/templates/: concept.html  index.html
cpr-prod-data-pipeline-cache/embeddings_input/: CCLW.executive.10014.4470.json
developers/: index.html
docs/: README.md  bot-users.md  concepts-store-vs-knowledge-graph.md  mkdocs.yml
flows/: README.md  __init__.py  aggregate.py  aggregate_inference_results.py  boundary.py  build_dataset.py  build_dataset_flow.py  classifier_metadata.py  classifiers_profiles.py  collect_wikibase_vespa_sync_artifacts.py  concept_librarian.py  concepts.py  config.py  count_family_document_concepts.py  create_classifiers_specs_pr.py  create_evaluation_dataset_in_argilla.py  data_backup.py  debug_mem.py  deindex.py  demote.py  deploy.py  deploy_static_sites.py  find_concept_weirdness.py  full_pipeline.py  generate_vibe_checker_embeddings.py  hello.py  index.py  index_from_aggregate_results.py  inference.py  inference_gpu.py  models_profiles.py  modify_threshold.py  normalise.py  orchestrate_full_pipeline.py  pipeline_config.py  predict.py  promote.py  push_new_dataset.py  repo_info.py  result.py  (+13 more)
infra/: Pulumi.production.yaml  Pulumi.wikibase.yaml  Pulumi.yaml  README.md  __main__.py  install.sh
knowledge_graph/: async_bridge.py  cache_classifier.jsonl  classifiers_profiles.py  cloud.py  compare_result_operation.py  concept.py  config.py  custom_classifier_config.py  exceptions.py  geography.py  graph_models.py  huggingface.py  identifiers.py  inference.py  labelled_passage.py  labelling.py  metrics.py  openrouter_pricing.py  span.py  utils.py  version.py  wandb_helpers.py  weightsandbiases.py  wikibase.py  wikidata.py
mcp/: Dockerfile  README.md  server.py
predictions_api/: Dockerfile  README.md  main.py
pyru/: main.py
scripts/: README.md  build_dataset.py  calculate_iaa.py  check_relationship_constraints.py  classifier_metadata.py  clean_labelled_passages_directory.py  cloud.py  compare_label_agreement.py  concept_librarian.py  config.py  demote.py  deploy.py  distil.py  do_classifier_specs_have_results.py  do_outputs_align_for_a_document.py  download_extensions.py  evaluate.py  evaluate_everything.py  extend_an_existing_dataset_in_argilla.py  extract_concepts.py  extract_keywords.py  fetch_performance_tables.py  filter_labelled_passages.py  find_document_mentions.py  generate_definition_from_references.py  generate_geography_eval_set.py  generate_merge_candidates.py  generate_report.py  get_acronyms.py  get_concept.py  infer.py  label.py  merge_concepts.py  migrate_datasets_to_common_argilla_workspace.py  modify_threshold.py  move_model_to_prod.py  nuke.py  platform.py  populate_neo4j.py  populate_wikibase.py  (+17 more)
search/: search_index.json
src/: _prompts.py  argilla.py  argilla_legacy.py  argilla_v2.py  benchmark_classifiers.py  cloud.py  concept.py  config.py  data.py  exceptions.py  external_keywords.py  geography.py  huggingface.py  identifiers.py  keywords_from_csv.py  labelled_passage.py  labelling.py  metrics.py  neo4j.py  passage.py  sampling.py  span.py  version.py  wikibase.py  wikidata.py
telemetry/: otel_setup.py
tests/: common_strategies.py  conftest.py  test_argilla.py  test_argilla_legacy.py  test_argilla_v2.py  test_auto_keyword_expansion.py  test_auto_llm_classifier.py  test_bert_token_classifier.py  test_classifier.py  test_classifier_ensemble.py  test_classifier_mixins.py  test_classifiers_profiles.py  test_cloud.py  test_concept.py  test_currency_keyword_classifier.py  test_demote.py  test_embedding_cache.py  test_evaluate.py  test_from_yaml.py  test_geography.py  test_identifiers.py  test_infer.py  test_just_commands.py  test_labelled_passage.py  test_labelling.py  test_large_language_model.py  test_platform.py  test_promote.py  test_span.py  test_targets.py  test_task_distribution.py  test_train.py  test_train_from_yaml.py  test_uncertainty_mixin.py  test_update_classifier_spec.py  test_version.py  test_wikibase.py
uis/: README.md
users/: index.html
vibe-checker/: README.md  config.yml  justfile  vibe-checker.just
wandb-mcp/: Dockerfile  README.md  server.py
wikibase/: LocalSettings.php  docker-compose.yml
(+514 files in other folders)
