[project]
name = "knowledge-graph"
version = "0.21.1"
description = ""
authors = [
  { name = "CPR Data Science", email = "dsci@climatepolicyradar.org" },
  { name = "CPR Platform", email = "platform@climatepolicyradar.org" },
]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
  "pydantic-ai-slim[openrouter]>=2.2.0",
  "rich>=15.0.0",
  "ipykernel>=7.3.0",
  "neomodel>=6.2.0",
  "rapidfuzz>=3.14.5",
  "python-dotenv>=1.2.2",
  "more-itertools>=11.1.0",
  "argilla>=2.8.0",
  "cpr-sdk==5.1.0",
  "wandb>=0.28.0",
  "boto3>=1.43.38",
  "pyvespa>=1.2.3",
  "pyyaml>=6.0.3",
  "nltk>=3.9.4",
  "datasets>=5.0.0",
  "boto3-stubs[s3]>=1.43.38",
  "typer>=0.26.8",
  "schedule>=1.2.2",
  "awscli>=1.45.38",
  "prefect[aws,slack]>=3.7.6",
  "httpx>=0.28.1",
  "tenacity>=9.1.4",
  "requests>=2.34.2",
  "aioboto3>=15.5.0",
  "types-aioboto3[s3]>=15.5.0",
  "pytest-aioboto3>=0.6.0",
  "coiled>=1.135.1",
  "prefect-coiled>=0.0.4",
  "html2text>=2025.4.15",
  "nest-asyncio>=1.6.0",
  "matplotlib>=3.11.0",
  "pandas>=3.0.3",
  "tabulate>=0.10.0",
  "polars>=1.42.1",
  "datalake>=2.5.10",
  "deltalake>=1.6.1",
  "scikit-learn>=1.9.0",
  "gitpython>=3.1.50",
  "snowflake-connector-python[secure-local-storage]>=4.6.0",
]

[project.optional-dependencies]
# Approach to torch cpu vs gpu as seen in uv docs:
# https://docs.astral.sh/uv/concepts/projects/dependencies/#optional-dependencies
transformers = [
  "torch>=2.12.1",
  "sentence-transformers>=5.6.0",
  "transformers[torch]>=5.12.1",
  "accelerate>=1.14.0",
  "seqeval>=1.2.2",
]
transformers_gpu = [
  "torch>=2.12.1",
  "sentence-transformers>=5.6.0",
  "transformers[torch]==5.12.1",
  "accelerate>=1.14.0",
  "seqeval>=1.2.2",
]
# https://docs.coiled.io/user_guide/software/docker.html
# https://docs.coiled.io/user_guide/software/package-sync-advanced.html
coiled = [
  "cloudpickle>=3.1.2",
  "coiled>=1.135.1",
  "dask>=2026.6.0",
  "distributed>=2026.6.0",
  "msgpack>=1.2.1",
  "prefect-coiled>=0.0.4",
  "tornado>=6.5.7",
]
dev = [
  "azure-pdf-parser @ git+https://github.com/climatepolicyradar/azure-pdf-parser.git@v0.5.0",
  "pytest>=9.1.1",
  "hypothesis>=6.155.7",
  "mkdocs-material>=9.7.6",
  "pre-commit>=4.6.0",
  "boto3>=1.43.38",
  "syrupy>=5.3.4",
  "moto[s3]>=5.2.2",
  "pytest-env>=1.6.0",
  "pytest-asyncio>=1.4.0",
  "pulumi>=3.249.0",
  "pulumi-aws>=7.35.0",
  "pulumi-docker>=5.1.0,<6.0.0",
  "jinja2>=3.1.6",
  "pyright>=1.1.411",
  "duckdb>=1.5.4",
  "pytest-xdist[psutil]>=3.8.0",
]
mcp = ["fastmcp>=3.4.2"]

[project.scripts]
train = "scripts.train:app"
classifier-configs = "scripts.custom_concept_training.configs_cli:app"
promote = "scripts.promote:app"
demote = "scripts.demote:app"
evaluate = "scripts.evaluate:app"
infer = "scripts.infer:app"
update-inference-classifiers = "scripts.update_classifier_spec:app"
classifier-metadata = "scripts.classifier_metadata:app"
deploy = "scripts.deploy:app"
collect_prefect_artifacts = "scripts.audit.collect_prefect_artifacts:app"


[tool.pytest.ini_options]
testpaths = ["tests"]
env = [
  "AWS_ENV=sandbox",
  "WIKIBASE_USERNAME=test_username",
  "WIKIBASE_PASSWORD=test_password",
  "WIKIBASE_URL=https://test.test.test",
  "ARGILLA_API_URL=http://localhost:6900",
  "ARGILLA_API_KEY=argilla.apikey",
  "WANDB_API_KEY=test_wandb_api_key",
]
markers = ["vespa", "transformers", "no_xdist: tests that are flaky under pytest-xdist and must run without parallelism"]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-aioboto3>=0.6.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["knowledge_graph"]

[tool.ruff]
lint.select = ["E", "F", "D", "I"]
# Docstring Ignores:
# D100 - Missing docstring in public module
# D103 - Missing docstring in public function
# D104 - Missing docstring in public package
# D107 - Missing docstring in __init__
# D202 - No blank lines allowed after function docstring
# D203 - 1 blank line required before class docstring
# D213 - Multi-line docstring summary should start at the first line
# D400 - First line should end with a period
# D401 - First line should be in imperative mood
# D406 - Section name should end with a newline
# D407 - Missing dashed underline after section
# D413 - Missing blank line after last section
# D415 - First line should end with a period, question mark, or exclamation point
lint.ignore = [
  "D100",
  "D103",
  "D104",
  "D107",
  "D202",
  "D203",
  "D212",
  "D400",
  "D401",
  "D406",
  "D407",
  "D413",
  "D415",
  "E501",
  "G201",  # logging-fstring-interpolation: allow f-strings in logging
]
line-length = 88

# Ignore `E402` (import violations) in all `__init__.py` files, and `E501` (line too long) in all files in the `tests` directory
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501"]

[tool.pyright]
reportMissingImports = false

[tool.pylint."messages control"]
disable = ["logging-fstring-interpolation"]  # W1203: allow f-strings in logging

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "transformers" },
  { index = "pytorch-cu118", extra = "transformers_gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.pip]
extra-index-url = []
index-strategy = "unsafe-best-match"
resolution = "highest"
prerelease = "if-necessary"
compile-bytecode = true

[tool.uv.workspace]
# Empty workspace for now, can add members as needed
members = []

[tool.uv]
conflicts = [[{ extra = "transformers" }, { extra = "transformers_gpu" }]]

[tool.typos.default.extend-words]
fpr = "fpr"
FPR = "FPR"
